# sdl_playground

./: .gitignore  CMakeLists.txt  README.md
include/App/: app.h
include/Core/: input.h  vec2.h  vec3.h
include/Core/Math/: mat4.h  quat.h  vec2.h  vec3.h  vec4.h
include/Engine/: component.h  gameobj.h  mesh.h
include/Engine/Components/: meshrenderer.h  transform.h
include/Engine/Mesh/: cubemesh.h
include/Utilities/: random.h
src/: main.cpp
src/App/: app_data.cpp  app_event_handler.cpp  app_postupdate.cpp  app_preupdate.cpp  app_quit.cpp  app_render.cpp  app_start.cpp
src/Core/: input.cpp  vec2.cpp  vec3.cpp
src/Core/Math/: mat4.cpp  quat.cpp  vec2.cpp  vec3.cpp  vec4.cpp
src/Engine/: component.cpp  gameobj.cpp
src/Engine/Components/: transform.cpp
src/Engine/Mesh/: cubemesh.cpp
src/Utilities/: random.cpp
